# fastdry

./: README.md  mkdocs.yml  pyproject.toml
.github/: pages.yml
docs/: intro.md
examples/: crud.py  hello.py
fastdry/: cr.py
tests/: test_cr.py
